--- a/meli-challenge-app/src/components/ItemDetail/itemDetail.scss
+++ b/meli-challenge-app/src/components/ItemDetail/itemDetail.scss
@@ -1,19 +1,32 @@
-.card{
+.card {
     min-height: 150px;
     margin: 20px;
-    img{
-
-    }
-    .price{
-
-    }
-    .title{
-
-    }
-    .location{
-
-    }
-    .free-shipping{
-
+    .item-content{
+        float: left;
+        width: 100%;
+        img {
+            width: 580px;
+            height: 580px;
+            object-fit: contain;
+            border-radius: 4px;
+        }
+        .price {
+            font-size: 46px;
+        }   
+        .title {
+            font-size: 24px;
+        }
+        .decimals {
+            font-size: 10px;
+        }
+        .img-item{
+            float:left;
+        }
+        .item-info-content{
+            float: left;
+        }
+        .description-title{
+            font-size: 28px;
+        }
     }
 }
