--- a/meli-challenge-app/src/components/HomeFeed/SearchItemCard/searchItemCard.scss
+++ b/meli-challenge-app/src/components/HomeFeed/SearchItemCard/searchItemCard.scss
@@ -1,19 +1,42 @@
-.card{
-    min-height: 150px;
-    margin: 20px;
+.card-search-item{
+    min-height: 218px;
+    padding: 16px;
     img{
-
+        width: 180px;
+        height: 180px;
+        object-fit: contain;
+        border-radius: 4px;
     }
-    .price{
-
+    .item-img{
+        float: left;
+        margin: 16px;
     }
-    .title{
-
-    }
-    .location{
-
-    }
-    .free-shipping{
-
+    .item-content{
+        float: left;
+        padding-top: 16px;
+        width: calc(100% - 260px);
+        .item-content-info{
+            float: left;
+            min-width: 400px;
+        }
+        .free-shipping-icon{
+            width: 15px;
+            height: 15px;
+            position: relative;
+            margin-left: 6px;
+            top: 0px;
+        }
+        .price{
+            font-size: 24px;
+        }
+        .title{
+            font-size: 18px;
+        }
+        .location{
+            font-size: 12px;
+            float: right;
+            min-width: 200px;
+            color: #666;
+        }
     }
 }
