--- a/meli-challenge-app/src/index.scss
+++ b/meli-challenge-app/src/index.scss
@@ -1,5 +1,73 @@
+$pixels_32: 32px;
+
 body {
     margin: 0;
     min-height: 100vh;
     padding: 0;
+}
+.body {
+    background-color: #EEE;
+    min-height: calc(100vh - 110px);
+    padding-top: 50px;
+    
+    .center {
+        margin: auto;
+    }
+
+    .container {
+        background-color: white;
+        min-height: 250px;
+    }
+}
+
+.col-1 {
+    width: 8.33%;
+}
+
+.col-2 {
+    width: 16.66%;
+}
+
+.col-3 {
+    width: 25%;
+}
+
+.col-4 {
+    width: 33.33%;
+}
+
+.col-5 {
+    width: 41.66%;
+}
+
+.col-6 {
+    width: 50%;
+}
+
+.col-7 {
+    width: 58.33%;
+}
+
+.col-8 {
+    width: 66.66%;
+}
+
+.col-9 {
+    width: 75%;
+}
+
+.col-10 {
+    width: 83.33%;
+}
+
+.col-11 {
+    width: 91.66%;
+}
+
+.col-12 {
+    width: 100%;
+}
+
+.normal-text {
+    font-size: 16px;
 }
