--- a/meli-challenge-app/src/components/SearchBar/searchBar.scss
+++ b/meli-challenge-app/src/components/SearchBar/searchBar.scss
@@ -4,6 +4,7 @@
     .center {
         margin: auto;
         height: 100%;
+        padding-top: 10px;
         .logo {
             width: 50px;
             vertical-align: middle;
