--- a/meli-challenge-app/src/index.scss
+++ b/meli-challenge-app/src/index.scss
@@ -1,16 +1,18 @@
 $pixels_32: 32px;
+$pixels_14: 14px;
 
 body {
     margin: 0;
     min-height: 100vh;
     padding: 0;
+    font-family: sans-serif;
 }
 
 .body {
     background-color: #EEE;
     min-height: calc(100vh - 110px);
-    padding-top: 50px;
-    
+    padding-top: $pixels_14;
+    padding-bottom: 25px;
     .center {
         margin: auto;
     }
